# Kenobi-bot-chess-engine

./: CMakeLists.txt  README.md  main.cpp  test.h
src/app/: CMakeLists.txt  Evaluation.cpp  Evaluation.h  MoveTable.cpp  MoveTable.h  SpriteHandler.cpp  SpriteHandler.h  board.cpp  board.h  button.cpp  button.h  clock.cpp  clock.h  fenUtility.cpp  fenUtility.h  piece.cpp  piece.h  singlefiletest.cpp  test.cpp  test.h
src/engine/: 1.txt  CMakeLists.txt  Search.cpp  Search.h  VirtualBoard.cpp  VirtualBoard.h  VirtualEvaluation.cpp  VirtualEvaluation.h  VirtualMoveTable.cpp  VirtualMoveTable.h  notes.txt
